<resources>
    <string name="app_name">CrudExampleTennisSQLite</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Button Description  -->
    <string name="update">UPDATE</string>
    <string name="create">CREATE</string>
    <string name="search">SEARCH</string>
    <string name="delete">DELETE</string>

    <!--  Textbox Descriptions  -->
    <string name="id">id</string>
    <string name="model">model</string>
    <string name="price">price</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>